# programowanie-obiektowe

./: README.md
lab1/: Makefile  README.md  hello.cpp  hello.hpp  main_program.cpp  strings.cpp  strings.hpp  vectors.cpp  vectors.hpp
lab2/: Makefile  main.cpp  mini_vector.cpp  mini_vector.hpp
lab3/: Makefile  Subtask.cpp  Subtask.hpp  Task.cpp  Task.hpp  main.cpp
lab5/: CMakeLists.txt  Sensor.hpp  SensorCollection.cpp  SensorCollection.hpp  main.cpp
lab6/: CMakeLists.txt  Cargoes.hpp  README.md  TransportVessels.hpp  main.cpp
lab7/: CMakeLists.txt  README.md  main.cpp  matrix.hpp  square_matrix.hpp
